package com.github.design.pattern.factory;

public interface DocumentParser {

    String processing(String filePath);

}
