package com.github.design.pattern.factory;

public enum DocumentType {

    WORD_DOC,
    WORD_DOCX,
    PDF

}
