package com.github.design.pattern.factory;

public class DocumentTypeIsInvalidException extends RuntimeException {
}
