package com.github.design.pattern.factory;

public class DocumentTypeIsNullException extends RuntimeException {
}
