@startuml
class FactoryMain {
+ {static} void main(String[])
}
class WordDocxDocumentParser {
+ String processing(String)
}
class DefaultDocumentParserFactory {
+ DocumentParser createDocumentParser(DocumentType)
}
class WordDocDocumentParser {
+ String processing(String)
}
class DocumentTypeIsInvalidException {
}
class DocumentTypeIsNullException {
}
class PDFDocumentParser {
+ String processing(String)
}
interface DocumentParserFactory {
~ DocumentParser createDocumentParser(DocumentType)
}
enum DocumentType {
+  WORD_DOC
+  WORD_DOCX
+  PDF
}
interface DocumentParser {
~ String processing(String)
}


DocumentParser <|.. WordDocxDocumentParser
DocumentParserFactory <|.. DefaultDocumentParserFactory
DocumentParser <|.. WordDocDocumentParser
RuntimeException <|-- DocumentTypeIsInvalidException
RuntimeException <|-- DocumentTypeIsNullException
DocumentParser <|.. PDFDocumentParser

DocumentParserFactory -> DocumentParser: create
@enduml